update for home data

--- a/config/model.conf
+++ b/config/model.conf
@@ -18,3 +18,10 @@
     "object" : "Seq2SeqAttNN",
     "params" : "config/nn_param.conf/stamp_rsc"
 }
+
+[stamp_home]
+{
+    "module" : "model.STAMP_home",
+    "object" : "Seq2SeqAttNN",
+    "params" : "config/nn_param.conf/stamp_home"
+}
