--- a/config/nn_param.conf
+++ b/config/nn_param.conf
@@ -53,3 +53,18 @@
     "cut_off": 20
 }
 
+[stamp_home : seq2seqv2nn]
+{
+    "nepoch" : 10,
+    "is_print" : true,
+    "batch_size" : 512,
+    "init_lr" : 0.003,
+    "max_grad_norm": 150,
+    "active" : "sigmoid",
+    "cell" : "gru",
+    "hidden_size" : 100,
+    "edim" : 100,
+    "emb_up": false,
+    "cut_off": 20
+}
+
