--- a/config/nn_param.conf
+++ b/config/nn_param.conf
@@ -56,7 +56,7 @@
 [stamp_home : seq2seqv2nn]
 {
     "nepoch" : 10,
-    "is_print" : true,
+    "is_print" : false,
     "batch_size" : 512,
     "init_lr" : 0.003,
     "max_grad_norm": 150,
@@ -64,7 +64,7 @@
     "cell" : "gru",
     "hidden_size" : 100,
     "edim" : 100,
-    "emb_up": false,
+    "emb_up": true,
     "cut_off": 20
 }
 
